Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29344

JS debugger does not keep state on state on step

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • Qt Creator 16.0.1
    • Qt Creator 11.0.0-beta2, Qt Creator 12.0.0-rc1
    • Debugger
    • 1807c398a (16.0)

    Description

      When stepping, all re-freshed elements are red ("new") and the locals tree view is always scrolled to the top.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-29344
        # Subject Branch Project Status CR V

        Activity

          People

            hjk hjk
            hjk hjk
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes