Debugger: Fix marking values as changed

Correctly update the cache before handling new information
to be able to display different colors for values to mark
them as unchanged or changed.

Fixes: QTCREATORBUG-29344
Change-Id: I1af9da4947d544248e5217f4e53f6f4f1c598bda
Reviewed-by: hjk <hjk@qt.io>